# substack-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  substack_client.py
substack_mcp/: __init__.py  server.py
tests/: test_add_image_preserves_content.py  test_draft_body.py  test_images.py  test_markdown.py
