[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "substack-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Substack integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Arthur Collé", email = "arthur@dsco.ai"}
]
keywords = ["substack", "mcp", "claude", "ai", "publishing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "mcp>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/acolle/substack-mcp"
Repository = "https://github.com/acolle/substack-mcp"
Issues = "https://github.com/acolle/substack-mcp/issues"

[project.scripts]
substack-mcp = "substack_mcp.server:main"

[tool.setuptools.packages.find]
include = ["substack_mcp*"]
